# LLM-Fact-Editing-By-Steering

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  steering.ipynb
data/: llama2_7b_chat_hf_log.txt
scripts/: estimate_edit_success_llama2-7b.py  estimate_steering_qwen.py  estimate_steeting.py  llama2_7b_console_edit_checkout.py  qwen-3.5_console_edit_checkout.py  t-lite-2.1_console_edit_checkout.py
src/llm_fact_editing_by_steering/: cli.py  model.py
src/llm_fact_editing_by_steering/EditsController/: EditsController.py
src/llm_fact_editing_by_steering/editscontrollers/: EditsController.py
src/llm_fact_editing_by_steering/hookscontrollers/: CosineMultAllTokensHooksController.py  CosineMultLastTokensActDiffController.py  CosineMultLastTokensHooksController.py  CosineMultLastTokensHooksControllerV2.py  CosineMultLastTokensHooksController_instruct.py  HooksController.py
src/llm_fact_editing_by_steering/utils/: ActivationsController.py  load_dataset.py  load_model.py
