[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-fact-editing-by-steering"
version = "0.1.0"
description = "Fact editing for LLMs via inference-time steering of hidden states"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Andrew Levchenko", email = "levch.andrew@gmail.com" }
]
dependencies = [
  "torch",
  "transformers",
  "accelerate",
  "tqdm",
  "numpy",
  "pandas"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]